<resources>
    <string name="app_name">Calculations</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_minus">-</string>
    <string name="_point">.</string>
    <string name="generate">Generate</string>
    <string name="_0">0</string>
    <string name="show_all">Show All</string>
    <string name="isEqualTo">=</string>
    <string name="clear">Clear</string>
    <string name="quit">Quit</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="go_back">Go Back</string>
</resources>
