<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/isEqualToButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/isEqualTo"
        android:textSize="36sp"
        android:background="@color/textButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/showAllButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/show_all"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:background="@color/textButton"
        app:layout_constraintBottom_toBottomOf="@+id/isEqualToButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/isEqualToButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/isEqualToButton"
        app:layout_constraintEnd_toEndOf="@+id/showAllButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/isEqualToButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:background="@color/textButton"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/showAllButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/isEqualToButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:background="@color/textButton"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/quitButton"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_0"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pointButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_point"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/generateButton"
        app:layout_constraintEnd_toEndOf="@+id/generateButton"
        app:layout_constraintStart_toStartOf="@+id/generateButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_minus"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="@+id/quitButton"
        app:layout_constraintStart_toStartOf="@+id/quitButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toEndOf="@+id/zeroButton"
        app:layout_constraintStart_toStartOf="@+id/zeroButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/pointButton"
        app:layout_constraintEnd_toEndOf="@+id/generateButton"
        app:layout_constraintStart_toStartOf="@+id/pointButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_3"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/minusButton"
        app:layout_constraintEnd_toEndOf="@+id/minusButton"
        app:layout_constraintStart_toStartOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintEnd_toEndOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="@+id/oneButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_5"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintEnd_toEndOf="@+id/generateButton"
        app:layout_constraintStart_toStartOf="@+id/twoButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_6"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintEnd_toEndOf="@+id/threeButton"
        app:layout_constraintStart_toStartOf="@+id/threeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_7"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toEndOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="@+id/fourButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_8"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintEnd_toEndOf="@+id/generateButton"
        app:layout_constraintStart_toStartOf="@+id/fiveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/textButton"
        android:text="@string/_9"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toEndOf="@+id/sixButton"
        app:layout_constraintStart_toStartOf="@+id/quitButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="15"
        android:background="@color/textColor"
        android:textSize="42sp"
        android:padding="20dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/showAllButton"
        app:layout_constraintStart_toStartOf="@+id/isEqualToButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/operationTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintEnd_toEndOf="@+id/inputEditText"
        app:layout_constraintStart_toStartOf="@+id/inputEditText"
        app:layout_constraintTop_toBottomOf="@+id/inputEditText" />
</android.support.constraint.ConstraintLayout>